--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project(tele_app)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(tele main.cpp)
-
-SET(CMAKE_SYSTEM_NAME Linux)
-SET(CMAKE_SYSTEM_PROCESSOR aarch64)
-SET(CMAKE_C_COMPILER   /opt/arm-gnu-toolchain-14.3.rel1-x86_64-aarch64-none-linux-gnu/bin/aarch64-none-linux-gnu-gcc)
-SET(CMAKE_CXX_COMPILER /opt/arm-gnu-toolchain-14.3.rel1-x86_64-aarch64-none-linux-gnu/bin/aarch64-none-linux-gnu-g++)
+add_executable(tele 
+    main.cpp
+    unameload.cpp
+    print_uptime.cpp
+    print_hwmon_info.cpp
+)
